--- a/NetworkFrameStudy/src/main/AndroidManifest.xml
+++ b/NetworkFrameStudy/src/main/AndroidManifest.xml
@@ -1,21 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cheng.networkframestudy" >
+    package="com.cheng.networkframestudy">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".okhttp.OkHttpActivity"
+            android:label="@string/title_activity_okhttp" />
+        <activity
+            android:name=".okhttp.sample.OkHttpDemoActivity"
+            android:label="@string/title_activity_okhttpdemo" />
+        <activity android:name=".okhttp.sample.OkHttpTestActivity"></activity>
     </application>
 
 </manifest>
