--- a/NetworkFrameStudy/build.gradle
+++ b/NetworkFrameStudy/build.gradle
@@ -23,12 +23,15 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.0.0'
     //==========第三方库==========
-    // View 注入库
+    // ButterKnife  View 注入库
     compile 'com.jakewharton:butterknife:7.0.1'
     // OkHttp3
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     // Gson
     compile 'com.google.code.gson:gson:2.3.1'
+    // Android-Async-Http
+    compile 'com.loopj.android:android-async-http:1.4.9'
+
     compile project(':Utils')
     compile project(':zBase')
 }
