计划采用抽象工厂模式或者工厂方法模式封装Http请求，将Http请求作为一个通用的模块，为其他模块提供服务。给出接口，可以有不同的实现，如OKHttp、AndroidAsyncHttp、xUtils、Volley等。 目前还没有完全思考明白，只有一个大概的思路。

--- a/NetworkFrameStudy/build.gradle
+++ b/NetworkFrameStudy/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     // Android-Async-Http
     compile 'com.loopj.android:android-async-http:1.4.9'
+    // xUtils3
+    compile 'org.xutils:xutils:3.3.16'
 
     compile project(':Utils')
     compile project(':zBase')
