--- a/MVPFrameStudy/src/main/AndroidManifest.xml
+++ b/MVPFrameStudy/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         <uses-library android:name="android.test.runner" />
 
         <activity
-            android:name=".UiMain"
+            android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
