--- a/NetworkFrameStudy/build.gradle
+++ b/NetworkFrameStudy/build.gradle
@@ -28,11 +28,14 @@ dependencies {
     // OkHttp3
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     // Gson
-    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.google.code.gson:gson:2.4'
     // Android-Async-Http
     compile 'com.loopj.android:android-async-http:1.4.9'
     // xUtils3
     compile 'org.xutils:xutils:3.3.16'
+    // Retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.0.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
 
     compile project(':Utils')
     compile project(':zBase')
