--- a/NetworkFrameStudy/src/main/AndroidManifest.xml
+++ b/NetworkFrameStudy/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
 
     <application
         android:allowBackup="true"
+        android:name=".BaseApp"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
