--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,7 @@ include ':MechanismStudy', ':MVCFrameStudy', ':MVPFrameStudy', ':AnimationStudy'
         ':CommonLibsStudy', ':OptimizeStudy', ':PluggableStudy', ':ImageRelatedStudy',
         ':DesignPatternStudy', ':ArithmeticStudy', ':MultithreadStudy', ':HotFixStudy',
         ':DataRelatedStudy', ':MechanismStudy', ':SecurityStudy', ':zBase', ':MVVMFrameStudy',
-        ':AnnotationStudy', ':HighQualityCodeStudy'
+        ':AnnotationStudy', ':HighQualityCodeStudy', ':Android4Study'
 /*
 include ':MechanismStudy', ':MVCFrameStudy', ':MVPFrameStudy', ':AnimationStudy',
         ':NetworkFrameStudy', ':Android5Study', ':Android6Study', ':StyleStudy',
